fix for gap on right side of view window in dev mode

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,9 +1,4 @@
-.main {
-  //adding: 1rem;
-  //width: 100vw;
-}
-
-.main > div > section {
+.spacing > * {
   //margin: auto;
   //margin-top: var(--spacer, 2rem);
   //max-width: 90rem;
